# FastAPI_Du_Zero

./: .gitignore  pyproject.toml
fastapi_du_zero/: app.py  database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 08c64c5044af_create_users_table.py  417984bab749_inclusion_of_the_updated_at_in_the_.py
tests/: conftest.py  test_app.py  test_models.py
